--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>VAI SER UMA IMAGEM AQUI</h1>
+    <header class="cabecalho"> 
+    <img class="cabecalho-imagem" src="Rectangle 2.png" alt="logo do fit life">
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">FIT LIFE</li>
+    </ul>
+   </header>
+   <section class="life">
+    <h2 class="life-titulo">Como comecar uma vida saudável?</h2>
+    <P class="life-texto-um">Uma rotina mais saudável pode parecer muito difícil de aplicar,
+         mas existem alguns pontos que você pode ir melhorando aos poucos para começar a ter uma vida fitness.
+        Os hábitos alimentares influenciam muito em uma rotina saudável, pois eles podem
+         te dar mais energia para otimizar seu dia, como podem também prejudicar sua saúde.
+        </P>
+    <p class="life-texto-dois">Por ser uma ferramenta de extrema importância na hora de começar uma vida 
+        fitness, vamos citar alguns pontos que você pode começar a melhorar na sua vida para ter mais saúde e 
+        energia.
+</p>
+<img classe="escola-imagem" src="image 1.png" alt="mulher se exercitando">
+   </section>
+    
 </body>
 
 </html>
