--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FIT LIFE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <TITLE>FIT LIFE</TITLE>
+</body>
+
+<body>
     <header class="cabecalho"> 
     <img class="cabecalho-imagem" src="Rectangle 2.png" alt="logo do fit life">
-    <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">FIT LIFE</li>
-    </ul>
+    <H1>FIT LIFE</H1>
+    
    </header>
    <section class="life">
-    <h2 class="life-titulo">Como comecar uma vida saudável?</h2>
+    <h2 class="life-titulo">Como começar uma vida saudável?</h2>
     <P class="life-texto-um">Uma rotina mais saudável pode parecer muito difícil de aplicar,
          mas existem alguns pontos que você pode ir melhorando aos poucos para começar a ter uma vida fitness.
         Os hábitos alimentares influenciam muito em uma rotina saudável, pois eles podem
@@ -26,6 +29,7 @@
         energia.
 </p>
 <img classe="escola-imagem" src="image 1.png" alt="mulher se exercitando">
+<img src="image 2.png" alt="">
    </section>
     
 </body>
